# batch_convert_document_gui

./: .gitignore  README.md  pyproject.toml  test_mhtml_convert.py  test_mhtml_orientation.py
.claude/: settings.local.json
.github/workflows/: build-windows.yml
docs/: deployment-guide.md
docs/plans/: 2026-03-23-batch-doc-to-docx-qt-gui-design.md  2026-03-23-batch-doc-to-docx-qt-gui-implementation-plan.md
packaging/pyinstaller/: batch-doc-to-docx-gui.spec
plans/20260323-1114-batch-doc-to-docx-qt-gui/: phase-01-project-scaffolding.md  phase-02-core-conversion-pipeline.md  phase-03-qt-gui-and-worker-thread.md  phase-04-packaging-and-docs.md  plan.md
plans/20260323-1147-windows-bundling-and-installer/: phase-01-define-windows-targets.md  phase-02-pyinstaller-spec-and-build-script.md  phase-03-installer-and-code-signing.md  phase-04-ci-build-and-release-artifacts.md  plan.md
plans/260323-1140-web-frontend-cloudflared/: phase-01-project-setup.md  phase-02-auth-module.md  phase-03-job-manager.md  phase-04-fastapi-server.md  phase-05-frontend-ui.md  phase-06-testing-and-docs.md  plan.md
plans/reports/: scout-260323-1140-README.md  scout-260323-1140-architecture-summary.md  scout-260323-1140-codebase-overview.md  scout-260323-1140-file-index.md  tester-260323-1154-windows-packaging-pytest-compileall.md
scripts/: build-windows.ps1
src/: __init__.py  app.py
src/core/: __init__.py  convert.py  (+6 more)
tests/: conftest.py  test_convert_smoke.py  test_copy.py  test_libreoffice_detection.py  test_paths.py  test_pipeline_mapping.py  test_sanity_imports.py  test_scan.py
(+5 files in other folders)
